--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="bg-base-100 flex flex-wrap gap-10 md:gap-40 justify-center lg:justify-between">
             <div class="">
-                <img class="w-36" src="images/Logo.png" alt="">
+                <a href="index.html"><img class="w-36" src="images/Logo.png" alt=""></a>
             </div>
             <div class="">
                 <a class="btn btn-active focus:text-white focus:bg-black uppercase">sort by view</a>
