--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a class="btn btn-active focus:text-white focus:bg-black uppercase">sort by view</a>
             </div>
             <div class="">
-                <a href="/blog.html" class="btn text-lg text-white hover:bg-lime-600 bg-orange-600">Blog</a>
+                <a href="./blog.html" class="btn text-lg text-white hover:bg-lime-600 bg-orange-600">Blog</a>
             </div>
         </div>
     </header>
